# bank

./: main.py  pyproject.toml
bi/: main.py  pyproject.toml
config/: config.yaml
ml/: main.py  pyproject.toml  requirements.txt
ml/notebooks/: test.ipynb
ml/src/jobs/: predict.py  register.py  retrieve.py
ml/src/models/: preprocess.py
src/dataset/: schema.py
src/jobs/: predict.py  retrieve.py  train.py
src/middleware/: seed.py
src/models/: light_gbm_classification.py  light_gbm_regression.py  models.py  preprocess.py
