[tool.poetry]
name = "bank"
version = "0.1.0"
description = ""
authors = ["insilicomab <nakada.mitsutaka.c76@kyoto-u.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pydantic = "^1.10.9"
hydra-core = "^1.3.2"
mlflow = "^2.4.1"
lightgbm = "^3.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
