[tool.poetry]
name = "bi"
version = "0.1.0"
description = ""
authors = ["insilicomab <nakada.mitsutaka.c76@kyoto-u.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
plotly = "^5.15.0"
pydantic = "^1.10.9"
pandera = "0.8.0"
streamlit = "^1.23.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
